swager 1.0.3 & fix favorite
